Add reCAPTCHA verification to login

--- a/ZenCoderDemo/Web.Debug.config
+++ b/ZenCoderDemo/Web.Debug.config
@@ -28,4 +28,8 @@
       </customErrors>
     -->
   </system.web>
+  <appSettings>
+    <add key="RecaptchaSiteKey" value="DEV_SITE_KEY" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="RecaptchaSecretKey" value="DEV_SECRET_KEY" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
 </configuration>
